# paper-trades

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.claude/: settings.json
patterns/: cli.py  config.py  db.py  plotting.py
patterns/broker/: __init__.py  alpaca.py  backtest.py  protocols.py
patterns/data/: alpaca_data.py  store.py
patterns/engine/: dedup.py  matcher.py  normalize.py  windows.py
patterns/live/: __init__.py  feed.py  journal.py  status.py  trade_loop.py  weekly_report.py
patterns/strategy/: __init__.py  base.py  candle_source.py  candlesticks.py  knn_shape.py  template_lib.py  templates.py
patterns/validate/: baselines.py  evaluate.py  ledger.py  stats.py  walkforward.py
tests/: conftest.py  test_alpaca.py  test_baselines.py  test_broker.py  test_candlesticks.py  test_cli_match.py  test_config.py  test_engine.py  test_evaluate.py  test_feed.py  test_ledger.py  test_store.py  test_strategy.py  test_templates.py  test_trade_loop.py  test_walkforward.py  test_weekly_report.py
