[project]
name = "patterns"
version = "0.1.0"
description = "k-NN price-pattern research and paper-trading system with a conservative validation layer"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "typer",
    "pyyaml",
    "matplotlib",
    "alpaca-py",
    "jaxtyping",
    "beartype",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "pandas-stubs", "types-PyYAML"]

[project.scripts]
patterns = "patterns.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["patterns*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["patterns"]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["alpaca.*", "jaxtyping", "matplotlib.*"]
ignore_missing_imports = true
